# pr-cop

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: README.md  review-cli.sh  review-curl-authed.sh  review-curl.sh  sample.diff
src/prcop/: __init__.py  cli.py  consensus.py  demo.html  diff.py  llm.py  orchestrator.py  server.py  sources.py  specialists.py
tests/: test_consensus.py  test_diff.py  test_llm.py  test_orchestrator_mock.py  test_server_safeguards.py  test_specialists.py
